--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -1,6 +1,7 @@
 name: Build Kernel
 
 on:
+  push:
   pull_request:
     paths:
       - '.github/workflows/kernel.yml'
@@ -21,9 +22,7 @@ jobs:
       - name: Set targets
         id: find_targets
         run: |
-          export TARGETS="$(perl ./scripts/dump-target-info.pl targets 2>/dev/null \
-            | sort -u -t '/' -k1,1 \
-            | awk '{ print $1 }')"
+          export TARGETS="ipq40xx/generic"
 
           JSON='['
           FIRST=1
