ci: build: add support for s3 bucket artifact upload
Signed-off-by: Petr Štetiar <ynezz@true.cz>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,15 @@ on:
       use_openwrt_container:
         type: boolean
         default: true
+      s3_remote_path:
+        type: string
+      s3_local_path:
+        default: '/github/workspace/openwrt/bin'
+        type: string
+    secrets:
+      s3_url:
+      s3_access_key:
+      s3_secret_key:
 
 permissions:
   contents: read
@@ -367,3 +376,13 @@ jobs:
         with:
           name: ${{ env.TARGET }}-${{ env.SUBTARGET }}-logs
           path: "openwrt/logs"
+
+      - name: Upload artifacts to s3 bucket
+        if: inputs.s3_remote_path != ''
+        uses: cloudkernels/minio-upload@v3
+        with:
+          url: ${{ secrets.s3_url }}
+          access-key: ${{ secrets.s3_access_key }}
+          secret-key: ${{ secrets.s3_secret_key }}
+          local-path: ${{ inputs.s3_local_path }}
+          remote-path: ${{ inputs.s3_remote_path }}
