--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -59,6 +59,7 @@ jobs:
             echo "/usr/local/opt/gnu-getopt/bin" >> "$GITHUB_PATH"
             echo "/usr/local/opt/make/libexec/gnubin" >> "$GITHUB_PATH"
             echo "/usr/local/opt/make/libexec/gnubin" >> "$GITHUB_PATH"
+            echo "$PATH"
 
       - name: Make prereq
         working-directory: ${{ env.WORKPATH }}/openwrt
