fixup! ci: add weekly bleeding edge distro build check
Signed-off-by: Petr Štetiar <ynezz@true.cz>

--- a/.github/workflows/distro-build.yml
+++ b/.github/workflows/distro-build.yml
@@ -41,7 +41,7 @@ jobs:
   build:
     name: ${{ inputs.distro }} build ${{ inputs.target }}/${{ inputs.subtarget }}
     runs-on: ubuntu-latest
-    container: $${{ inputs.container }}
+    container: ${{ inputs.container }}
 
     permissions:
       contents: read
